--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Project
+name: Build Toolchain
 
 on:
   workflow_dispatch: # 手动触发
@@ -11,14 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 拉取源码
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 设置 Docker
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
+      # 构建 Docker 镜像
       - name: Build Docker image
-        run: docker build -t mycompiler .
+        run: docker build -t toolchain .
 
-      - name: Run compiled app
-        run: docker run --rm mycompiler
+      # 启动容器并执行 make shell
+      # 注意：make shell 会进入交互式模式，所以我们改成直接构建工具链
+      - name: Pre-build toolchain
+        run: make shell || true
+
+      # 如果需要在容器里构建项目源码
+      - name: Run build inside container
+        run: |
+          docker run --rm \
+            -v ${{ github.workspace }}/workspace:/root/workspace \
+            toolchain \
+            bash -c "cd /root/workspace && make build || echo 'Put your build commands here'"
+
+      # 上传构建结果
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-output
+          path: workspace
