--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,34 +11,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 拉取源码
+      # 1. 检出代码
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 设置 Docker
+      # 2. 安装 Docker
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
-      # 构建 Docker 镜像
+      # 3. 构建 Docker 镜像
       - name: Build Docker image
         run: docker build -t toolchain .
 
-      # 启动容器并执行 make shell
-      # 注意：make shell 会进入交互式模式，所以我们改成直接构建工具链
-      - name: Pre-build toolchain
+      # 4. 构建工具链
+      - name: Build toolchain
         run: make shell || true
 
-      # 如果需要在容器里构建项目源码
-      - name: Run build inside container
+      # 5. 在容器中编译源码
+      - name: Build inside container
         run: |
           docker run --rm \
             -v ${{ github.workspace }}/workspace:/root/workspace \
             toolchain \
-            bash -c "cd /root/workspace && make build || echo 'Put your build commands here'"
+            bash -c "cd /root/workspace && make build || echo '请在这里修改为正确的构建命令'"
 
-      # 上传构建结果
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+      # 6. 上传产物（修复新版 v4）
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
         with:
           name: build-output
           path: workspace
+          compression-level: 6
