--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,50 @@
-# .github/workflows/build-release.yml
-name: Build release
+name: Build Toolchain
 
-on: workflow_call
-
-permissions:
-  contents: write
+on:
+  workflow_dispatch: # 手动触发
+  push:
+    分支:
+      - main
 
 jobs:
-  build-and-publish:
-    name: Build artifacts
+  build:
     runs-on: ubuntu-latest
-    container:
-      image: anibaldeboni/trimui-smart-pro-toolchain:latest
-      env:
-        SS_DEV_ID: ${{ secrets.SS_DEV_ID }}
-        SS_DEV_PASSWORD: ${{ secrets.SS_DEV_PASSWORD }}
-        APP_VERSION: ${{ github.ref_name }}
+
     steps:
-        - name: Check out the repo
-          uses: actions/checkout@v4
+      # 1. 检出代码
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-        - name: Build package
-          run: make
+      # 2. 设置 Docker
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
 
-        - name: Upload assets
-          uses: softprops/action-gh-release@v2
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          if: ${{startsWith(github.ref, 'refs/tags/') }}
-          with:
-            文件: ./ScreechApp/ScreechApp.zip
-        
+      # 3. 构建 Docker 镜像
+      - name: Build Docker image
+        run: docker build -t toolchain .
+
+      # 4. 在容器中构建
+      - name: Build inside container
+        run: |
+          mkdir -p workspace
+          docker run --rm \
+            -u toolchain \
+            -v ${{ github.workspace }}/workspace:/home/toolchain/workspace \
+            toolchain \
+            bash -c "
+              cd /home/toolchain/workspace && \
+              echo '开始构建项目...' && \
+              make build || echo '请根据需要修改构建命令'
+            "
+
+      # 5. 检查 workspace 内容
+      - name: Check workspace files
+        run: ls -R workspace || echo "workspace is empty"
+
+      # 6. 上传产物
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: workspace
+          compression-level: 6
